fix icon too narrow on FireFox

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -243,7 +243,7 @@ footer {
 
 .multiselect-list .icon {
 	width: 2.5em;
-	height: auto;
+	height: 2.5em;
 	margin-right: 0.5em;
 	border-radius: 5px;
 	border-style: solid;
